<resources>
    <string name="app_name">buyer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OrderHistory">OrderHistory</string>
    <string name="SupplierList">SupplierList</string>
    <string name="OrderCheck">OrderCheck</string>
    <string name="PlusMark">+</string>
    <string name="MinusMark">-</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Order">order</string>
    <string name="OrderDecide">OrderDecide</string>
    <string name="OrderExec">OrderExec</string>
    <string name="GoHome">Go home</string>
    <string name="GoTop">Go top</string>
    <string name="SendComment">Send comment</string>
    <string name="MidasiSubTotal">SUB TOTAL:</string>
    <string name="MidasiDeliverFee">DELIVER FEE:</string>
    <string name="MidasiTotal">TOTAL:</string>
    <string name="MidasiCharge">Charge:</string>
    <string name="MidasiDeliverDay">DELIVER DAY:</string>
    <string name="MidasiDeliverTo">DELIVER TO:</string>
    <string name="OrderIsFinished">Order is finished.</string>
    <string name="Okey">OK</string>
    <string name="ZERO">0</string>
    <string name="DummyString">　</string>
    <string name="SampleText">sample text</string>
</resources>
