<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_dynamic_items">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewDynamicItem"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/tool_bar"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/colorOrderBar">

            <TextView
                android:text="@string/GoHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textViewButtonHome"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/colorOrderButton"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/OrderCheck"
                android:id="@+id/textViewButtonOrderCheck"
                android:textColor="@color/colorOrderButton"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:text="　"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView10"
                android:layout_weight="1"
                tools:text="@string/DummyString" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
